--- a/SampleApp/SampleApp.iOS/Info.plist
+++ b/SampleApp/SampleApp.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>SampleApp</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.xamarin.mysampleapp</string>
+	<string>com.xamarin.MySampleApp</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
